# TTS-Dataset

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/: vercel.datasette.json
.github/workflows/: deploy-site-pages.yml  update-voices.yml
data/raw/: aws-polly-voices.json  elevenlabs-voices.json  espeak-voices.json  googletrans-voices.json  ibm-watson-voices.json  linux-voices.json  macos-voices.json  microsoft-azure-voices.json  sherpa-onnx-voices.json  static-acapela-mindexpress-voices.json  static-acapela-sapi-voices.json  static-anreader-andreader-voices.json  static-avsynth-voices.json  static-cereproc-cereproc-voices.json  static-espeak-voices.json  static-nuance-nuance-voices.json  static-rhvoice-sapi-voices.json  upliftai-voices.json  windows-elevenlabs-voices.json  windows-upliftai-voices.json  windows-voices.json
data/reference/: accessibility-solutions.yaml  azure_voice_previews.json  country-population.json  geo-data.json  language-speakers.json  sherpa-model-families.json  voice-taxonomy-map.yaml  worldalphabets_audio_index.json
data/static/: voices-site.json
docs/: taxonomy.md
scripts/: collect_voices.py  db_stats.py  export_site_data.py  fetch_voice_previews.py  harmonize.py  import_legacy_temp_data.py  import_worldalphabets_audio.py
site/: index.html  package-lock.json  package.json  vercel.json
site/public/data/: voices-site.json
site/scripts/: sync-data.mjs
site/src/: App.jsx  main.jsx  styles.css
tests/: test_scripts.py
tts-data/: acapela-mindexpress.json  acapela-sapi.json  anreader-andreader.json  avsynth.json  cereproc-cereproc.json  espeak.json  microsoft-sapi.json  nuance-nuance.json  rhvoice-sapi.json
tts_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
