[project]
name = "tts-dataset"
version = "0.1.0"
description = "Monthly TTS voice catalog dataset pipeline using py3-tts-wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py3-tts-wrapper[sapi]",
    "sqlite-utils",
    "langcodes",
]

[project.optional-dependencies]
# All online TTS engines (optional - only needed if collecting from those services)
google = ["py3-tts-wrapper[google]"]
azure = ["py3-tts-wrapper[microsoft]"]
aws-polly = ["py3-tts-wrapper[polly]"]
elevenlabs = ["py3-tts-wrapper[elevenlabs]"]
watson = ["py3-tts-wrapper[watson]"]
witai = ["py3-tts-wrapper[witai]"]
sherpaonnx = ["py3-tts-wrapper[sherpaonnx]"]
# Development dependencies
dev = [
    "pytest",
    "ruff",
    "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "S101",  # Use of assert (disabled for data scripts)
    "B008",  # Do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["py3_tts_wrapper", "sqlite_utils", "langcodes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["scripts/*.py"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
