[project]
name = "tts-dataset"
version = "0.1.0"
description = "Monthly TTS voice catalog dataset pipeline using py3-tts-wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlite-utils",
    "langcodes",
    "py3-tts-wrapper[google,microsoft,sherpaonnx,googletrans,witai,watson,openai,playht,polly]>=0.10.23",
    "py3-tts-wrapper[sapi,uwp]>=0.10.23; sys_platform == 'win32'",
    "py3-tts-wrapper[avsynth]>=0.10.23; sys_platform == 'darwin'",
]

[project.optional-dependencies]
# Development dependencies only
dev = [
    "pytest",
    "ruff",
    "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "S101",  # Use of assert (disabled for data scripts)
    "B008",  # Do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["py3_tts_wrapper", "sqlite_utils", "langcodes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for full pipeline",
]
